Bug 329957 - kget crash
Summary: kget crash
Status: RESOLVED FIXED
Alias: None
Product: kget
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.12.0
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: KGet bugs
URL:
Keywords: drkonqi
: 335692 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-01-14 15:04 UTC by rouven
Modified: 2014-06-02 10:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rouven 2014-01-14 15:04:21 UTC
Application: kget (2.11.3)
KDE Platform Version: 4.11.3
Qt Version: 4.8.5
Operating System: Linux 3.11.6-4-desktop x86_64
Distribution: "openSUSE 13.1 (Bottle) (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed: i was moving a category colum and there it crashed. (this bugreporting program says that this is not enoug information, but what more can i say? if you nedd more info send me a mail. good luck with fixing the bug.)

The crash can be reproduced every time.

-- Backtrace:
Application: KGet (kget), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[KCrash Handler]
#6  size (this=0x44006500740181) at ../../src/corelib/tools/qlist.h:98
#7  indexOf (from=0, t=@0x7fff2b1cfbd0: 0x26e6ee0, this=0x44006500740181) at ../../src/corelib/tools/qlist.h:851
#8  QList<QWidget*>::removeAll (this=0x44006500740181, _t=@0x7fff2b1cfbd0: 0x26e6ee0) at ../../src/corelib/tools/qlist.h:772
#9  0x00007f8165c07a76 in QWidget::removeAction (this=0x26e6ee0, action=0x26a587a) at kernel/qwidget.cpp:3328
#10 0x0000000000441b17 in _start ()

Reported using DrKonqi
Comment 1 David E. Narvaez 2014-01-26 23:06:33 UTC
Git commit c6531c0334a7cab9d37cc921fb5792b4727b0611 by David E. Narvaez.
Committed on 26/01/2014 at 22:43.
Pushed by narvaez into branch 'master'.

Keep Header Menu Synced with Header Columns

Once the header menu was initialized it would never be updated with the
columns added to the menu. You could see this by right-clicking on the
headers and noticing that the menu only had a title and no columns to
check/uncheck. This change keeps the header menu updated every time the
header changes its column count.
FIXED-IN: 4.12.2
REVIEW: 115320

M  +4    -4    ui/transfersview.cpp
M  +1    -1    ui/transfersview.h

http://commits.kde.org/kget/c6531c0334a7cab9d37cc921fb5792b4727b0611
Comment 2 Christoph Feck 2014-06-02 10:17:24 UTC
*** Bug 335692 has been marked as a duplicate of this bug. ***